-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Beta2
-
88147eb3f6 (qt/qtdeclarative/dev) 02f9fd8af1 (qt/qtdeclarative/6.3)
qmlsc goes into infinite loop with attached example
| For Gerrit Dashboard: QTBUG-101011 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 396747,2 | QmlCompiler: Avoid infinite loop in dead store elimination | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 396852,2 | QmlCompiler: Avoid infinite loop in dead store elimination | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |