QmlCompiler: Avoid infinite loop in dead store elimination

We have to mark the required variables also in block 0. And we shouldn't
generate empty blocks.

Fixes: QTBUG-101011
Change-Id: I0dd19f69f45f507cb83e2ddfba3060de48a940b4
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 88147eb3f621e7d972410698d6edca16493d7c66)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>